# metaswitch-server

./: Cargo.toml  README.md
src/: main.rs  metacritic.rs  service.rs
