[package]
name = "metaswitch-server"
version = "0.1.0"
authors = ["Bryan Gilbert <bryan@bryan.sh>"]

[dependencies]
hyper = "0.12"
futures = "0.1.23"
tokio-core = "0.1.17"
tokio = "0.1.7"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
strsim = "0.8.0"
lazy_static = "1.1.0"
regex = "1.0.2"
reqwest = "0.8.8"
url = "1.7.1"
