[package]
name = "metaswitch-server"
version = "0.1.0"
authors = ["Bryan Gilbert <bryan@bryan.sh>"]
edition = "2018"

[dependencies]
hyper = {version = "0.14.10", features = ["full"]}
tokio = {version = "1.8.1", features = ["full"]}
futures = "0.1.30"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.59"
strsim = "0.8.0"
lazy_static = "1.1.0"
regex = "1.0.2"
reqwest = { version = "0.11.4", features = ["blocking"]}
url = "1.7.1"
